third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/tables-1.stderr
TOML parse error at line 4, column 1
  |
4 | [[fruit]] # Not allowed
  | ^
invalid table header
duplicate key `fruit` in document root
